removed icon from drop down submenu. fixed spacing on the sidebar headings.

--- a/structure/sass/default/includes/_search.scss
+++ b/structure/sass/default/includes/_search.scss
@@ -25,6 +25,14 @@
 
   flex: 1;
 
+  &:focus,
+  &:focus-within {
+   background-color: $neutral-2;
+   border-style    : dashed;
+   border-width    : 3px;
+   border-right    : transparent 1px solid;
+  }
+
   &::placeholder {
    color     : color(accent-lighter);
    opacity   : 1;
@@ -35,6 +43,7 @@
   &:focus::placeholder,
   &:focus-within::placeholder {
    opacity: 0;
+
   }
  }
 
